--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "Perfumes": "lite-server"
+    "test": "echo \"Error: no test specified\" && exit 1" ,
+    "dev": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/nder1996/Responsive-Perfumes/issues"
   },
-  "homepage": "https://github.com/nder1996/Responsive-Perfumes#readme"
+  "homepage": "https://github.com/nder1996/Responsive-Perfumes#readme",
+  "devDependencies": {
+    "lite-server": "^2.6.1"
+  }
 }
